kubernetes/homelab/ingress/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lan-only
spec:
  ipAllowList:
    sourceRange:
      - 192.168.50.0/24
      - 10.8.0.0/24
      - 127.0.0.1/32
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lan-and-cluster
spec:
  ipAllowList:
    sourceRange:
      - 192.168.50.0/24
      - 10.8.0.0/24
      - 10.42.0.0/16
      - 10.43.0.0/16
      - 127.0.0.1/32
