kubernetes/homelab/ingress/routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homelab
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.erikfrankling.duckdns.org`)
      middlewares:
        - name: lan-only
      services:
        - kind: TraefikService
          name: api@internal
    - kind: Rule
      match: Host(`adguard.erikfrankling.duckdns.org`)
      middlewares:
        - name: lan-only
      services:
        - name: adguard
          port: 80
    - kind: Rule
      match: Host(`vault.erikfrankling.duckdns.org`)
      services:
        - name: vaultwarden
          port: 80
    - kind: Rule
      match: Host(`chat.erikfrankling.duckdns.org`)
      services:
        - name: openwebui
          port: 8080
    - kind: Rule
      match: Host(`claw.erikfrankling.duckdns.org`)
      middlewares:
        - name: lan-only
      services:
        - name: openclaw
          port: 18789
  tls: {}
